--- a/client/src/pages/Availability.css
+++ b/client/src/pages/Availability.css
@@ -1,7 +1,6 @@
 /* Calendly-style Availability Page */
 .availability-page {
   padding: 32px 40px;
-  max-width: 960px;
 }
 
 .availability-page h1 {
