--- a/client/src/pages/Meetings.css
+++ b/client/src/pages/Meetings.css
@@ -1,7 +1,6 @@
 /* Calendly-style Meetings Page */
 .meetings-page {
   padding: 32px 40px;
-  max-width: 960px;
 }
 
 .meetings-header {
